smoke nade name

--- a/Drookian Fen Guard/Data/Core/Languages/English/Actions.xml
+++ b/Drookian Fen Guard/Data/Core/Languages/English/Actions.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <language>
     <entry name="AstraMilitarum/BacklineHarassment" value="Backline Harassment"/>
-    <entry name="AstraMilitarum/BacklineHarassment" value=""/>
-    <entry name="AstraMilitarum/BacklineHarassment" value=""/>
+    <entry name="AstraMilitarum/BacklineHarassmentDescription" value=""/>
+    <entry name="AstraMilitarum/BacklineHarassmentFlavor" value=""/>
+    <entry name="ThrowSmokeGrenade" value="Throw Smoke Grenade"/>
+    <entry name="ThrowSmokeGrenadeDescription" value=""/>
+    <entry name="ThrowSmokeGrenadeFlavor" value=""/>
 </language>
