--- a/Drookian Fen Guard/Data/Core/Languages/English/Weapons.xml
+++ b/Drookian Fen Guard/Data/Core/Languages/English/Weapons.xml
@@ -2,5 +2,5 @@
 <language>
     <entry name="AstraMilitarum/DrookianDaggers" value="Drookian Poisoned Daggers"/>
     <entry name="AstraMilitarum/DrookianDaggersDescription" value="Daggers that are dipped in poison."/>
-    <entry name="AstraMilitarum/DrookianDaggersFlavor" value="Drookian Assassins strike from all angles using their dual daggers. Few foes can defend themselves from this flurry of attacks, and even fewer survive the bite of the caustic acid, bottled directly from the arduous swamps of Drook VI."/>
+    <entry name="AstraMilitarum/DrookianDaggersFlavor" value="Drookian Assassins strike from all angles using their dual daggers. Few foes can defend themselves from this flurry of attacks, and even fewer survive the bite of the caustic acid, bottled directly from the arduous bogs of Drook VI."/>
 </language>
