--- a/Drookian Fen Guard/Data/Core/Languages/English/Traits.xml
+++ b/Drookian Fen Guard/Data/Core/Languages/English/Traits.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <language>
     <entry name="AstraMilitarum/Drookian" value="Drookian"/>
-    <entry name="AstraMilitarum/DrookianDescription" value=""/>
-    <entry name="AstraMilitarum/DrookianFlavor" value=""/>
+    <entry name="AstraMilitarum/DrookianDescription" value="Drookians gain increased Accuracy while Overwatching and increased Damage when attacking Forests, but lose Morale when near non-Drookians, unless in the prescence of a Commissar."/>
+    <entry name="AstraMilitarum/DrookianFlavor" value="Hardened by the harsh swamps of their homeworld, Drookians are expert ambushers and scouts. With this lifetime of wading through swamps, Drookians have also learned that any lofty ideals of &quot;humanity's brotherhood&quot; are barely worth the paper they're printed on. Drookians find that true loyality and brotherhood is found within your clan, which makes them distrusting of foreigners, unless properly... motivated."/>
     <entry name="AstraMilitarum/DrookianSaboteur" value="Drookian Saboteur"/>
-    <entry name="AstraMilitarum/DrookianSaboteurDescription" value=""/>
-    <entry name="AstraMilitarum/DrookianSaboteurFlavor" value=""/>
+    <entry name="AstraMilitarum/DrookianSaboteurDescription" value="Increased damage against vehicles. Greatly increased damage against Fortifications"/>
+    <entry name="AstraMilitarum/DrookianSaboteurFlavor" value="Back on Drook VI, identifying and exploiting even the smallest cracks can send even the greatest walls crashing into the bog."/>
     <entry name="Harassed" value="Harassed"/>
-    <entry name="HarassedDescription" value=""/>
-    <entry name="HarassedFlavor" value=""/>
+    <entry name="HarassedDescription" value="Loses Morale and has decreased Accuracy."/>
+    <entry name="HarassedFlavor" value="Constant night attacks have left these troops exhausted, decreasing their combat readiness."/>
     <entry name="AstraMilitarum/DrookianAssassination" value="Drookian Assassination"/>
     <entry name="AstraMilitarum/DrookianAssassinationDescription" value="Increased attacks against enemies that have moved. Increased damage against Heroes."/>
     <entry name="AstraMilitarum/DrookianAssassinationFlavor" value="After a long march, there's nothing like a knife to the throat to put you to rest."/>
