--- a/Drookian Fen Guard/Data/Core/Languages/English/Units.xml
+++ b/Drookian Fen Guard/Data/Core/Languages/English/Units.xml
@@ -4,15 +4,15 @@
     <entry name="AstraMilitarum/DrookianFenGuardsmenDescription" value="Light infantry focussed on scouting and harassing the enemy. Smaller squad size, but faster, more accurate, and can more easily demolish enemy machines."/>
     <entry name="AstraMilitarum/DrookianFenGuardsmenFlavor" value="After years of trekking through mud while soaking wet, even the typical Drookian Fen Guardsman can scout through land like butter."/>
     <entry name="AstraMilitarum/DrookianStormtrooper" value="Drookian Stormtroper"/>
-    <entry name="AstraMilitarum/DrookianStormtrooperDescription" value="Elite light infantry. Weaker, but packs a much greater punch than the Guardsmen."/>
+    <entry name="AstraMilitarum/DrookianStormtrooperDescription" value="Elite light infantry. Weaker, but sneakier and packs a much greater punch than the Guardsmen."/>
     <entry name="AstraMilitarum/DrookianStormtrooperFlavor" value="With enough firepower, a routine ambush can turn into a decimated enemy division."/>
     <entry name="AstraMilitarum/DrookianScout" value="Drookian Scout"/>
-    <entry name="AstraMilitarum/DrookianScoutDescription" value="Light infantry with greater emphasis on scouting and harassment."/>
-    <entry name="AstraMilitarum/DrookianScoutFlavor" value=""/>
+    <entry name="AstraMilitarum/DrookianScoutDescription" value="Even lighter infantry with greater emphasis on scouting and harassment. Can ambush enemies to steal resources."/>
+    <entry name="AstraMilitarum/DrookianScoutFlavor" value="The most agile soldiers of the Fen Guard, passing through terrain like water."/>
     <entry name="AstraMilitarum/DrookianAssassin" value="Drookian Assassin"/>
-    <entry name="AstraMilitarum/DrookianAssassinDescription" value=""/>
-    <entry name="AstraMilitarum/DrookianAssassinFlavor" value=""/>
+    <entry name="AstraMilitarum/DrookianAssassinDescription" value="Light melee infantry trained to exploit exposed infantry and to take down heroes."/>
+    <entry name="AstraMilitarum/DrookianAssassinFlavor" value="When night falls, sentries continue to patrol the perimeter, bored out of their minds. When day breaks, the outpost is devoid of life."/>
     <entry name="AstraMilitarum/DrookianHoverChimera" value="Drookian Hover-Chimera"/>
-    <entry name="AstraMilitarum/DrookianHoverChimeraDescription" value=""/>
-    <entry name="AstraMilitarum/DrookianHoverChimeraFlavor" value=""/>
+    <entry name="AstraMilitarum/DrookianHoverChimeraDescription" value="Swift, hovering transport vehicle specializing in rapid behind-enemy-lines insertions. Trades protection and damage for speed."/>
+    <entry name="AstraMilitarum/DrookianHoverChimeraFlavor" value="Wheels and tracks have no place on the soft mud of the Drookian bogs. In turn, Drookian transports hover above the ground, speeding between dying foliage."/>
 </language>
