--- a/Drookian Fen Guard/Data/Core/Languages/English/Units.xml
+++ b/Drookian Fen Guard/Data/Core/Languages/English/Units.xml
@@ -14,5 +14,5 @@
     <entry name="AstraMilitarum/DrookianAssassinFlavor" value="When night falls, sentries continue to patrol the perimeter, bored out of their minds. When day breaks, the outpost is devoid of life."/>
     <entry name="AstraMilitarum/DrookianHoverChimera" value="Drookian Hover-Chimera"/>
     <entry name="AstraMilitarum/DrookianHoverChimeraDescription" value="Swift, hovering transport vehicle specializing in rapid behind-enemy-lines insertions. Trades protection and damage for speed."/>
-    <entry name="AstraMilitarum/DrookianHoverChimeraFlavor" value="Wheels and tracks have no place on the soft mud of the Drookian bogs. In turn, Drookian transports hover above the ground, speeding between dying foliage."/>
+    <entry name="AstraMilitarum/DrookianHoverChimeraFlavor" value="Wheels and tracks have no place on the soft mud of the Drookian bogs. In turn, Drookian transports hover above the ground, slipping through decaying foliage."/>
 </language>
