--- a/Drookian Fen Guard/Data/Core/Languages/English/Traits.xml
+++ b/Drookian Fen Guard/Data/Core/Languages/English/Traits.xml
@@ -12,6 +12,9 @@
     <entry name="Undersupplied" value="Undersupplied"/>
     <entry name="UndersuppliedDescription" value="Decreased morale. Costs more resources to upkeep."/>
     <entry name="UndersuppliedFlavor" value="Troops without food and weapons are of little use. Efforts must be spent to resupply them."/>
+    <entry name="AstraMilitarum/SpoilsOfWar" value="Spoils of War"/>
+    <entry name="AstraMilitarum/SpoilsOfWarDescription" value="Reduced upkeep."/>
+    <entry name="AstraMilitarum/SpoilsOfWarFlavor" value="Troops without food and weapons are of little use. Efforts must be spent to resupply them."/>
     <entry name="AstraMilitarum/DrookianAssassination" value="Drookian Assassination"/>
     <entry name="AstraMilitarum/DrookianAssassinationDescription" value="Increased attacks against enemies that have moved. Increased damage against Heroes."/>
     <entry name="AstraMilitarum/DrookianAssassinationFlavor" value="After a long march, there's nothing like a knife to the throat to put you to rest."/>
