--- a/Drookian Fen Guard/Data/Core/Languages/English/Units.xml
+++ b/Drookian Fen Guard/Data/Core/Languages/English/Units.xml
@@ -8,9 +8,9 @@
     <entry name="AstraMilitarum/DrookianStormtrooperFlavor" value="With enough firepower, a routine ambush can turn into a decimated enemy division."/>
     <entry name="AstraMilitarum/DrookianScout" value="Drookian Scout"/>
     <entry name="AstraMilitarum/DrookianScoutDescription" value="Even lighter infantry with greater emphasis on scouting and harassment. Can ambush enemies to steal resources."/>
-    <entry name="AstraMilitarum/DrookianScoutFlavor" value="The most agile soldiers of the Fen Guard, passing through terrain like water."/>
+    <entry name="AstraMilitarum/DrookianScoutFlavor" value="The most agile soldiers of the Fen Guard, traversing through rough terrain like water."/>
     <entry name="AstraMilitarum/DrookianAssassin" value="Drookian Assassin"/>
-    <entry name="AstraMilitarum/DrookianAssassinDescription" value="Light melee infantry trained to exploit exposed infantry and to take down heroes."/>
+    <entry name="AstraMilitarum/DrookianAssassinDescription" value="Light melee infantry trained to exploit exposed infantry and to take down heroes. Can infiltrate after researching Substructure Extension."/>
     <entry name="AstraMilitarum/DrookianAssassinFlavor" value="When night falls, sentries continue to patrol the perimeter, bored out of their minds. When day breaks, the outpost is devoid of life."/>
     <entry name="AstraMilitarum/DrookianHoverChimera" value="Drookian Hover-Chimera"/>
     <entry name="AstraMilitarum/DrookianHoverChimeraDescription" value="Swift, hovering transport vehicle specializing in rapid behind-enemy-lines insertions. Trades protection and damage for speed."/>
