--- a/Drookian Fen Guard/Data/Core/Languages/English/Traits.xml
+++ b/Drookian Fen Guard/Data/Core/Languages/English/Traits.xml
@@ -16,6 +16,6 @@
     <entry name="AstraMilitarum/SpoilsOfWarDescription" value="Reduced upkeep."/>
     <entry name="AstraMilitarum/SpoilsOfWarFlavor" value="Troops without food and weapons are of little use. Efforts must be spent to resupply them."/>
     <entry name="AstraMilitarum/DrookianAssassination" value="Drookian Assassination"/>
-    <entry name="AstraMilitarum/DrookianAssassinationDescription" value="Increased attacks against enemies that have moved. Increased damage against Heroes."/>
+    <entry name="AstraMilitarum/DrookianAssassinationDescription" value="Increased attacks against enemies that have moved. Increased attacks against enemies inside Outposts. Increased damage against Heroes."/>
     <entry name="AstraMilitarum/DrookianAssassinationFlavor" value="After a long march, there's nothing like a knife to the throat to put you to rest."/>
 </language>
