--- a/Drookian Fen Guard/Data/Core/Languages/English/Units.xml
+++ b/Drookian Fen Guard/Data/Core/Languages/English/Units.xml
@@ -4,7 +4,7 @@
     <entry name="AstraMilitarum/DrookianFenGuardsmenDescription" value="Light infantry focussed on scouting and harassing the enemy. Smaller squad size, but faster, more accurate, and can more easily demolish enemy machines."/>
     <entry name="AstraMilitarum/DrookianFenGuardsmenFlavor" value="After years of trekking through mud while soaking wet, even the typical Drookian Fen Guardsman can scout through land like butter."/>
     <entry name="AstraMilitarum/DrookianStormtrooper" value="Drookian Stormtroper"/>
-    <entry name="AstraMilitarum/DrookianStormtrooperDescription" value="Elite light infantry. Weaker, but sneakier and packs a much greater punch than the Guardsmen."/>
+    <entry name="AstraMilitarum/DrookianStormtrooperDescription" value="Elite light infantry. Weaker, but sneakier than a regular Tempestus Scion."/>
     <entry name="AstraMilitarum/DrookianStormtrooperFlavor" value="With enough firepower, a routine ambush can turn into a decimated enemy division."/>
     <entry name="AstraMilitarum/DrookianScout" value="Drookian Scout"/>
     <entry name="AstraMilitarum/DrookianScoutDescription" value="Even lighter infantry with greater emphasis on scouting and harassment. Can ambush enemies to steal resources."/>
