--- a/Armageddon Steel Legionnaires/Data/Core/Languages/English/Traits.xml
+++ b/Armageddon Steel Legionnaires/Data/Core/Languages/English/Traits.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <language>
-	<entry name="AstraMilitarum/ArmageddonOrks" value="Ork Hunter"/>
+	<entry name="AstraMilitarum/ArmageddonOrks" value="Greenskin Expertise"/>
 	<entry name="AstraMilitarum/ArmageddonOrksDescription" value="Steel Legionnaires are 17% more accurate against Orks."/>
 	<entry name="AstraMilitarum/ArmageddonOrksFlavor" value="Facing the Greentide on Armageddon taught the Steel Legion the best ways to exterminate Orks."/>
 	<entry name="AstraMilitarum/ArmageddonDeployment" value="Armageddon Rapid Deployment"/>
@@ -15,5 +15,8 @@
 	<entry name="AstraMilitarum/ArmageddonDeploymentHealingRate" value="Armageddon Readiness"/>
 	<entry name="AstraMilitarum/ArmageddonDeploymentHealingRateDescription" value="Increases the healing rate when this unit is embarked in a vehicle."/>
 	<entry name="AstraMilitarum/ArmageddonDeploymentHealingRateFlavor" value="Steel Legion Medics have discovered more efficient packing methods for first aid kits to store inside their transports."/>
+	<entry name="AstraMilitarum/ArmageddonOrkHunters" value="Ork Hunter"/>
+	<entry name="AstraMilitarum/ArmageddonOrkHuntersDescription" value="Steel Legionnaires are 17% more accurate against Orks."/>
+	<entry name="AstraMilitarum/ArmageddonOrkHuntersFlavor" value="Facing the Greentide on Armageddon taught the Steel Legion the best ways to exterminate Orks."/>
 
 </language>
