purging flames action

--- a/Armageddon Steel Legionnaires/Data/Core/Languages/English/Actions.xml
+++ b/Armageddon Steel Legionnaires/Data/Core/Languages/English/Actions.xml
@@ -3,4 +3,7 @@
 	<entry name="AstraMilitarum/OrkHuntersTrap" value="Place Punji Trap"/>
 	<entry name="AstraMilitarum/OrkHuntersTrapDescription" value="Lays a trap that slows and damages enemy infantry."/>
 	<entry name="AstraMilitarum/OrkHuntersTrapFlavor" value="Armageddon Ork Hunters deftly lay pitfall traps to halt any would-be attackers. Da Boyz aren't so tough with broken legs and half of them impaled."/>
+	<entry name="AstraMilitarum/PurgingFlames" value="Purging Flames"/>
+	<entry name="AstraMilitarum/PurgingFlamesDescription" value="Burns away Orkoid Fungus and Forests."/>
+	<entry name="AstraMilitarum/PurgingFlamesFlavor" value="Merely killing an Ork isn't enough. Their corpses leave behind fungi, which if left unchecked, will sprout Greenskin monstrosities in the future. Enter: holy prometheum."/>
 </language>
