--- a/Armageddon Steel Legionnaires/Data/Core/Languages/English/Units.xml
+++ b/Armageddon Steel Legionnaires/Data/Core/Languages/English/Units.xml
@@ -18,12 +18,12 @@
 	<entry name="AstraMilitarum/OrkHuntersTrapFlavor" value="Armageddon Ork Hunters deftly lay pitfall traps to halt any would-be attackers. Da Boyz aren't so tough with broken legs and half of them impaled."/>
 	<!-- Vehicles -->
 	<entry name="AstraMilitarum/ArmageddonChimera" value="Armageddon Pattern Chimera"/>
-	<entry name="AstraMilitarum/ArmageddonChimeraDescription" value="Tougher, more expensive Chimera that can easily slip behind enemy lines. Its smoke launcher is improved and can target beyond the vehicle itself."/>
+	<entry name="AstraMilitarum/ArmageddonChimeraDescription" value="Tougher, more expensive Chimera that can easily slip behind enemy lines. Its smoke launcher is improved and can target beyond the vehicle itself. Its heavier armour means it is unable to traverse amphibiously."/>
 	<entry name="AstraMilitarum/ArmageddonChimeraFlavor" value=""/>
 	<entry name="AstraMilitarum/APDS6aDefender" value="APDS-6a Defender"/>
 	<entry name="AstraMilitarum/APDS6aDefenderDescription" value="Improvised tank with a Laser Demolisher, specialising in cutting through tanks."/>
 	<entry name="AstraMilitarum/APDS6aDefenderFlavor" value=""/>
 	<entry name="AstraMilitarum/ArmageddonHeavyAssaultChimera" value="Armageddon Pattern Heavy Assault Chimera"/>
-	<entry name="AstraMilitarum/ArmageddonHeavyAssaultChimeraDescription" value=""/>
+	<entry name="AstraMilitarum/ArmageddonHeavyAssaultChimeraDescription" value="Heavily armed troop transport that rapidly deploys infantry behind enemy lines. It uses the standard Multi-laser with a hull-mounted Heavy Flamer and a manned Hotshot Lasgun Array, and additional Heavy Bolters if researched."/>
 	<entry name="AstraMilitarum/ArmageddonHeavyAssaultChimeraFlavor" value=""/>
 </language>
