--- a/Armageddon Steel Legionnaires/Data/Core/Languages/English/Units.xml
+++ b/Armageddon Steel Legionnaires/Data/Core/Languages/English/Units.xml
@@ -27,6 +27,6 @@
 	<entry name="AstraMilitarum/ArmageddonHeavyAssaultChimeraDescription" value="Heavily armed troop transport that rapidly deploys infantry behind enemy lines. It uses the standard Multi-laser with a hull-mounted Heavy Flamer and a manned Hotshot Lasgun Array, and additional Heavy Bolters if researched."/>
 	<entry name="AstraMilitarum/ArmageddonHeavyAssaultChimeraFlavor" value=""/>
 	<entry name="AstraMilitarum/ArmageddonBasilisk" value="Armageddon Pattern Basilisk"/>
-	<entry name="AstraMilitarum/ArmageddonBasiliskDescription" value="Tougher, more expensive Basilisk with a closed top."/>
+	<entry name="AstraMilitarum/ArmageddonBasiliskDescription" value="Slower but tougher Basilisk with a closed top. Better suited for defence."/>
 	<entry name="AstraMilitarum/ArmageddonBasiliskFlavor" value=""/>
 </language>
