--- a/Armageddon Steel Legionnaires/Data/Core/Languages/English/Weapons.xml
+++ b/Armageddon Steel Legionnaires/Data/Core/Languages/English/Weapons.xml
@@ -5,4 +5,8 @@
 	<entry name="OrkHuntersTrap" value="Punji Trap"/>
 	<entry name="OrkHuntersTrapDescription" value="Slows and damages enemy infantry."/>
 	<entry name="OrkHuntersTrapFlavor" value="Armageddon Ork Hunters deftly lay pitfall traps to halt any would-be attackers. Da Boyz aren't so tough with broken legs and half of them impaled."/>
+	<entry name="LaserDestroyer" value="Laser Destroyer"/>
+	<entry name="LaserDestroyerFlavor" value="<string name='Weapons/HeavyLaserDestroyerFlavor'/>"/>
+	<entry name="HotShotLasgunArray" value="Hotshot Lasgun Array"/>
+	<entry name="HotShotLasgunArrayFlavor" value="<string name='Weapons/LasFlavor'/>"/> <!-- lasgun, lasgun array, and hotshot lasgun use this -->
 </language>
