--- a/Armageddon Steel Legionnaires/Data/Core/Languages/English/Actions.xml
+++ b/Armageddon Steel Legionnaires/Data/Core/Languages/English/Actions.xml
@@ -6,4 +6,17 @@
 	<entry name="AstraMilitarum/PurgingFlames" value="Purging Flames"/>
 	<entry name="AstraMilitarum/PurgingFlamesDescription" value="Burns away Orkoid Fungus and Forests."/>
 	<entry name="AstraMilitarum/PurgingFlamesFlavor" value="Merely killing an Ork isn't enough. Their corpses leave behind fungi, which if left unchecked, will sprout Greenskin monstrosities in the future. Enter: holy prometheum."/>
+	<!-- Steel Legion Commissar -->
+	<entry name="AstraMilitarum/SteelLegionDiscipline" value="Steel Legion Discipline"/>
+	<entry name="AstraMilitarum/SteelLegionDisciplineDescription" value="Increased accuracy for infantry and vehicles. Further increased for members of the Armageddon Steel Legion."/>
+	<entry name="AstraMilitarum/SteelLegionDisciplineFlavor" value=""/>
+	<entry name="AstraMilitarum/ArmoredFist" value="Armoured Fist"/>
+	<entry name="AstraMilitarum/ArmoredFistDescription" value="Increased armour and reduced upkeep for vehicles."/>
+	<entry name="AstraMilitarum/ArmoredFistFlavor" value="On Armageddon"/>
+	<entry name="AstraMilitarum/AuraOfCommand" value="Aura of Command"/>
+	<entry name="AstraMilitarum/AuraOfCommandDescription" value="Boosts morale of allied infantry and vehicles. Increased ranged damage reduction for the Commissar and any transport they are in."/>
+	<entry name="AstraMilitarum/AuraOfCommandFlavor" value=""/>
+	<entry name="AstraMilitarum/CombinedArms" value="Combined Arms"/>
+	<entry name="AstraMilitarum/CombinedArmsDescription" value="Grants damage reduction to infantry whom are adjacent to vehicles, and vice-versa. Infantry gain ranged damage reduction; vehicles, melee."/>
+	<entry name="AstraMilitarum/CombinedArmsFlavor" value=""/>
 </language>
