--- a/Armageddon Steel Legionnaires/Data/Core/Languages/English/Traits.xml
+++ b/Armageddon Steel Legionnaires/Data/Core/Languages/English/Traits.xml
@@ -32,16 +32,16 @@
 	<entry name="AstraMilitarum/SteelLegionDiscipline" value="<string name='Actions/AstraMilitarum/SteelLegionDiscipline'/>"/>
 	<entry name="AstraMilitarum/SteelLegionDisciplineDescription" value="<string name='Actions/AstraMilitarum/SteelLegionDisciplineDescription'/>"/>
 	<entry name="AstraMilitarum/SteelLegionDisciplineFlavor" value="<string name='Actions/AstraMilitarum/SteelLegionDisciplineFlavor'/>"/>
-	<entry name="AstraMilitarum/ArmoredFist" value="Armoured Fist"/>
+	<entry name="AstraMilitarum/ArmoredFist" value="<string name='Actions/AstraMilitarum/ArmoredFist'/>"/>
 	<!-- <entry name="AstraMilitarum/ArmoredFistDescription" value=""/> -->
-	<entry name="AstraMilitarum/ArmoredFistFlavor" value="On Armageddon"/>
-	<entry name="AstraMilitarum/AuraOfCommand" value="Aura of Command"/>
-	<entry name="AstraMilitarum/AuraOfCommandDescription" value=""/>
-	<entry name="AstraMilitarum/AuraOfCommandFlavor" value=""/>
-	<entry name="AstraMilitarum/CommandArmor" value=""/>
-	<entry name="AstraMilitarum/CommandArmorDescription" value=""/>
-	<entry name="AstraMilitarum/CommandArmorFlavor" value=""/>
-	<entry name="AstraMilitarum/CombinedArms" value="Combined Arms"/>
-	<entry name="AstraMilitarum/CombinedArmsDescription" value=""/>
-	<entry name="AstraMilitarum/CombinedArmsFlavor" value=""/>
+	<entry name="AstraMilitarum/ArmoredFistFlavor" value="<string name='Actions/AstraMilitarum/ArmoredFistFlavor'/>"/>
+	<entry name="AstraMilitarum/AuraOfCommand" value="<string name='Actions/AstraMilitarum/AuraOfCommand'/>"/>
+	<!-- <entry name="AstraMilitarum/AuraOfCommandDescription" value=""/> --> <!-- boost for infantry and vehicle. the numbers are self explanatory -->
+	<entry name="AstraMilitarum/AuraOfCommandFlavor" value="<string name='Actions/AstraMilitarum/AuraOfCommandFlavor'/>"/>
+	<entry name="AstraMilitarum/CommandArmor" value="Commander's Confidence"/>
+	<entry name="AstraMilitarum/CommandArmorDescription" value="Increased ranged damage reduction for the Commissar and any transport they are in."/>
+	<entry name="AstraMilitarum/CommandArmorFlavor" value="<string name='Actions/AstraMilitarum/AuraOfCommandFlavor'/>"/>
+	<entry name="AstraMilitarum/CombinedArms" value="<string name='Actions/AstraMilitarum/CombinedArms'/>"/>
+	<entry name="AstraMilitarum/CombinedArmsDescription" value="<string name='Actions/AstraMilitarum/CombinedArmsDescription'/>"/>
+	<entry name="AstraMilitarum/CombinedArmsFlavor" value="<string name='Actions/AstraMilitarum/CombinedArmsFlavor'/>"/>
 </language>
